# CapWeaver

./: .env.example  .gitignore  README.md  README_CN.md  run_local_corecoder.ps1
CoreCoder/: .gitignore  README.md  README_CN.md  nanocoder_tool_lifecycle.json  pyproject.toml
CoreCoder/.github/workflows/: publish.yml
CoreCoder/article/: 04-context-compression.md
CoreCoder/corecoder/: __init__.py  agent.py  capability_curator.py  capability_telemetry.py  capability_validator.py  cli.py  config.py  goal_manager.py  llm.py  prompt.py  retention_engine.py  session.py  skill_library.py  skill_manager.py  skillification_engine.py  storage.py  tool_library.py  trajectory_recorder.py
CoreCoder/corecoder/skill_store/: index.json
CoreCoder/corecoder/skill_store/json_codebase_schema_auditor/: meta.json  skill.py
CoreCoder/corecoder/skill_store/json_structure_analyzer/: meta.json  skill.py
CoreCoder/corecoder/skill_store/py_file_analyzer/: meta.json  skill.py
CoreCoder/corecoder/skill_store/tech_graph/: meta.json  skill.py
CoreCoder/corecoder/tool_store/: index.json
CoreCoder/corecoder/tool_store/json_batch_analyzer/: meta.json  tool.py
CoreCoder/corecoder/tools/: __init__.py  agent.py  base.py  bash.py  edit.py  skill_search.py  tool_forge.py  tool_search.py  write.py
CoreCoder/tests/: test_core.py  test_tools.py
